--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>PhishingDetector</title>
 </head>
 <body>
-    
+    <div class="container" style="width: 450px">
+        <h1>PhishDetector</h1>
+        <h2 id="emailNotOpenErr"></h2>
+
+        <h2 id="subjectLine"></h2>
+        <h4 id="sender"></h4>
+        <p id="emailBody"></p>
+    </div>
 </body>
+<script src="./content.js"></script>
 </html>
