Fine-tune prompt before sending request to gpt model

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       >
         Check
       </button>
-      <script src="gpt.js"></script>
       <h1>PhishDetector</h1>
       <h2 id="emailNotOpenErr"></h2>
 
@@ -28,5 +27,7 @@
       <p id="emailBody"></p>
     </div>
   </body>
+  <script src="./config.js"></script>
   <script src="./content.js"></script>
+  <script src="gpt.js"></script>
 </html>
