--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 
 <body>
   <div class="container" style="width: 450px">
-    <button id="checkButton" style="
-          bottom: 5px;
-          position: fixed;
-          width: 15%;
-          height: 5%;
-          right: 42.5%;
-        ">
+    <button id="checkButton">
       Check
     </button>
     <script src="gpt.js"></script>
@@ -27,7 +21,7 @@
     <h4 id="sender"></h4>
     <!-- <h5>Content:</h5> -->
     <div id="emailContentDiv" class="emailContentDiv">
-      <p id="emailBody"></p>
+      <p id="emailBody" style="margin: 0;"></p>
     </div>
     <h2></h2>
 </body>
